compiladores/arquivos_antlr/trabalhoFinalParser.py
# Generated from trabalhoFinal.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class trabalhoFinalParser ( Parser ):

    grammarFileName = "trabalhoFinal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "','", "';'", "'int'", "'real'", 
                     "'bool'", "'String'", "'('", "')'", "'{'", "'}'", "'return'", 
                     "'main'", "'break'", "'input'", "'print'", "'for'", 
                     "'while'", "'if'", "'else'", "'*'", "'/'", "'+'", "'-'", 
                     "'!'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MUL", "DIV", "ADD", "SUB", "NEG", "IGUAL", 
                      "DIFERENTE", "MAIOR_Q", "MENOR_Q", "MAIOR_IGUAL", 
                      "MENOR_IGUAL", "ID", "WS", "BOOL", "REAL", "STRING", 
                      "INT" ]

    RULE_vazio = 0
    RULE_prog = 1
    RULE_decVarConst = 2
    RULE_decVariaveis = 3
    RULE_listaIds = 4
    RULE_listaAtrib = 5
    RULE_atribuicao = 6
    RULE_tipo = 7
    RULE_decFunc = 8
    RULE_chamaFunc = 9
    RULE_parametros = 10
    RULE_retornoFuncao = 11
    RULE_main = 12
    RULE_comandos = 13
    RULE_comandosLoop = 14
    RULE_entrada = 15
    RULE_printe = 16
    RULE_imprime = 17
    RULE_impressao = 18
    RULE_forLoop = 19
    RULE_whileLoop = 20
    RULE_ifElse = 21
    RULE_verificacao = 22
    RULE_comparacao = 23
    RULE_expressao = 24
    RULE_chamaID = 25
    RULE_salvaID = 26

    ruleNames =  [ "vazio", "prog", "decVarConst", "decVariaveis", "listaIds", 
                   "listaAtrib", "atribuicao", "tipo", "decFunc", "chamaFunc", 
                   "parametros", "retornoFuncao", "main", "comandos", "comandosLoop", 
                   "entrada", "printe", "imprime", "impressao", "forLoop", 
                   "whileLoop", "ifElse", "verificacao", "comparacao", "expressao", 
                   "chamaID", "salvaID" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    MUL=21
    DIV=22
    ADD=23
    SUB=24
    NEG=25
    IGUAL=26
    DIFERENTE=27
    MAIOR_Q=28
    MENOR_Q=29
    MAIOR_IGUAL=30
    MENOR_IGUAL=31
    ID=32
    WS=33
    BOOL=34
    REAL=35
    STRING=36
    INT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    # "memoria" para guardar os pares variavel/valor
    memoria = dict()

    def salva_variavel(variavel, valor):
    	memoria[variavel] = valor


    def expr_dual (left, op, right):
        if op == MUL:
            return left * right
        elif op == DIV:
            return left / right
        elif op == ADD:
            return left + right
        elif op == SUB:
            return left - right
        elif op == MAIOR_Q:
            return left > right
        elif op == MENOR_Q:
            return left < right
        elif op == MAIOR_IGUAL:
            return left >= right
        else:
            return left <= right


    def expr_unico (op, right):
        if (op == NEG):
            tipo_valor = type(memoria.get(right, right))

            if (tipo_valor is bool):
                return not right
            else:
                print(fg.red + f'ERRO: a operação {NEG} só aceita valor do tipo bool.' + fg.rs)
        else:
            valor = memoria.get(right, right)

            if type(valor) in (int, float):
                return valor * (-1)
            else:
                print(fg.red + 'ERRO: valor deve ser do tipo int ou real.' + fg.rs)



    class VazioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_vazio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVazio" ):
                listener.enterVazio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVazio" ):
                listener.exitVazio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVazio" ):
                return visitor.visitVazio(self)
            else:
                return visitor.visitChildren(self)




    def vazio(self):

        localctx = trabalhoFinalParser.VazioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_vazio)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(trabalhoFinalParser.MainContext,0)


        def decVarConst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinalParser.DecVarConstContext)
            else:
                return self.getTypedRuleContext(trabalhoFinalParser.DecVarConstContext,i)


        def decFunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinalParser.DecFuncContext)
            else:
                return self.getTypedRuleContext(trabalhoFinalParser.DecFuncContext,i)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = trabalhoFinalParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.decVarConst() 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6) | (1 << trabalhoFinalParser.ID))) != 0):
                self.state = 62
                self.decFunc()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # TipoContext

        def listaIds(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaIdsContext,0)


        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinalParser.TipoContext,0)


        def listaAtrib(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaAtribContext,0)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_decVarConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVarConst" ):
                listener.enterDecVarConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVarConst" ):
                listener.exitDecVarConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecVarConst" ):
                return visitor.visitDecVarConst(self)
            else:
                return visitor.visitChildren(self)




    def decVarConst(self):

        localctx = trabalhoFinalParser.DecVarConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decVarConst)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [trabalhoFinalParser.T__3, trabalhoFinalParser.T__4, trabalhoFinalParser.T__5, trabalhoFinalParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                localctx.t = self.tipo()
                self.state = 71
                self.listaIds()
                pass
            elif token in [trabalhoFinalParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(trabalhoFinalParser.T__0)
                self.state = 74
                localctx.t = self.tipo()
                self.state = 75
                self.listaAtrib()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVariaveisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # TipoContext

        def listaIds(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaIdsContext,0)


        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinalParser.TipoContext,0)


        def listaAtrib(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaAtribContext,0)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_decVariaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVariaveis" ):
                listener.enterDecVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVariaveis" ):
                listener.exitDecVariaveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecVariaveis" ):
                return visitor.visitDecVariaveis(self)
            else:
                return visitor.visitChildren(self)




    def decVariaveis(self):

        localctx = trabalhoFinalParser.DecVariaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decVariaveis)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                localctx.t = self.tipo()
                self.state = 80
                self.listaIds()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                localctx.t = self.tipo()
                self.state = 83
                self.listaAtrib()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def salvaID(self):
            return self.getTypedRuleContext(trabalhoFinalParser.SalvaIDContext,0)


        def listaIds(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaIdsContext,0)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = trabalhoFinalParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaIds)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.salvaID()
                self.state = 88
                self.match(trabalhoFinalParser.T__1)
                self.state = 89
                self.listaIds()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.salvaID()
                self.state = 92
                self.match(trabalhoFinalParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAtribContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(trabalhoFinalParser.AtribuicaoContext,0)


        def listaAtrib(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ListaAtribContext,0)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_listaAtrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAtrib" ):
                listener.enterListaAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAtrib" ):
                listener.exitListaAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAtrib" ):
                return visitor.visitListaAtrib(self)
            else:
                return visitor.visitChildren(self)




    def listaAtrib(self):

        localctx = trabalhoFinalParser.ListaAtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listaAtrib)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.atribuicao()
                self.state = 97
                self.match(trabalhoFinalParser.T__1)
                self.state = 98
                self.listaAtrib()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.atribuicao()
                self.state = 101
                self.match(trabalhoFinalParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_atribuicao

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AtribValorContext(AtribuicaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinalParser.AtribuicaoContext
            super().__init__(parser)
            self.valor = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(trabalhoFinalParser.ID, 0)
        def IGUAL(self):
            return self.getToken(trabalhoFinalParser.IGUAL, 0)
        def STRING(self):
            return self.getToken(trabalhoFinalParser.STRING, 0)
        def INT(self):
            return self.getToken(trabalhoFinalParser.INT, 0)
        def BOOL(self):
            return self.getToken(trabalhoFinalParser.BOOL, 0)
        def REAL(self):
            return self.getToken(trabalhoFinalParser.REAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribValor" ):
                listener.enterAtribValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribValor" ):
                listener.exitAtribValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribValor" ):
                return visitor.visitAtribValor(self)
            else:
                return visitor.visitChildren(self)


    class AtribIDContext(AtribuicaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinalParser.AtribuicaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(trabalhoFinalParser.ID, 0)
        def IGUAL(self):
            return self.getToken(trabalhoFinalParser.IGUAL, 0)
        def chamaID(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ChamaIDContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribID" ):
                listener.enterAtribID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribID" ):
                listener.exitAtribID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribID" ):
                return visitor.visitAtribID(self)
            else:
                return visitor.visitChildren(self)



    def atribuicao(self):

        localctx = trabalhoFinalParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribuicao)
        self._la = 0 # Token type
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = trabalhoFinalParser.AtribValorContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(trabalhoFinalParser.ID)
                self.state = 106
                self.match(trabalhoFinalParser.IGUAL)
                self.state = 107
                localctx.valor = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.BOOL) | (1 << trabalhoFinalParser.REAL) | (1 << trabalhoFinalParser.STRING) | (1 << trabalhoFinalParser.INT))) != 0)):
                    localctx.valor = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                localctx = trabalhoFinalParser.AtribIDContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(trabalhoFinalParser.ID)
                self.state = 109
                self.match(trabalhoFinalParser.IGUAL)
                self.state = 110
                self.chamaID()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = trabalhoFinalParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_decFunc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DecFuncaoRetornoContext(DecFuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinalParser.DecFuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinalParser.TipoContext,0)

        def ID(self):
            return self.getToken(trabalhoFinalParser.ID, 0)
        def comandos(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ComandosContext,0)

        def retornoFuncao(self):
            return self.getTypedRuleContext(trabalhoFinalParser.RetornoFuncaoContext,0)

        def parametros(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ParametrosContext,0)

        def decVariaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinalParser.DecVariaveisContext)
            else:
                return self.getTypedRuleContext(trabalhoFinalParser.DecVariaveisContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFuncaoRetorno" ):
                listener.enterDecFuncaoRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFuncaoRetorno" ):
                listener.exitDecFuncaoRetorno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecFuncaoRetorno" ):
                return visitor.visitDecFuncaoRetorno(self)
            else:
                return visitor.visitChildren(self)


    class DecFuncaoVoidContext(DecFuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinalParser.DecFuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(trabalhoFinalParser.ID, 0)
        def comandos(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ComandosContext,0)

        def parametros(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ParametrosContext,0)

        def decVariaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinalParser.DecVariaveisContext)
            else:
                return self.getTypedRuleContext(trabalhoFinalParser.DecVariaveisContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFuncaoVoid" ):
                listener.enterDecFuncaoVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFuncaoVoid" ):
                listener.exitDecFuncaoVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecFuncaoVoid" ):
                return visitor.visitDecFuncaoVoid(self)
            else:
                return visitor.visitChildren(self)



    def decFunc(self):

        localctx = trabalhoFinalParser.DecFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decFunc)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [trabalhoFinalParser.T__3, trabalhoFinalParser.T__4, trabalhoFinalParser.T__5, trabalhoFinalParser.T__6]:
                localctx = trabalhoFinalParser.DecFuncaoRetornoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.tipo()
                self.state = 116
                self.match(trabalhoFinalParser.ID)
                self.state = 117
                self.match(trabalhoFinalParser.T__7)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6))) != 0):
                    self.state = 118
                    self.parametros()


                self.state = 121
                self.match(trabalhoFinalParser.T__8)
                self.state = 122
                self.match(trabalhoFinalParser.T__9)
                self.state = 131
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6))) != 0):
                        self.state = 123
                        self.decVariaveis()
                        self.state = 128
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 129
                    self.comandos()
                    pass

                elif la_ == 2:
                    self.state = 130
                    self.retornoFuncao()
                    pass


                self.state = 133
                self.match(trabalhoFinalParser.T__10)
                pass
            elif token in [trabalhoFinalParser.ID]:
                localctx = trabalhoFinalParser.DecFuncaoVoidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(trabalhoFinalParser.ID)
                self.state = 136
                self.match(trabalhoFinalParser.T__7)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6))) != 0):
                    self.state = 137
                    self.parametros()


                self.state = 140
                self.match(trabalhoFinalParser.T__8)
                self.state = 141
                self.match(trabalhoFinalParser.T__9)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabalhoFinalParser.T__3) | (1 << trabalhoFinalParser.T__4) | (1 << trabalhoFinalParser.T__5) | (1 << trabalhoFinalParser.T__6))) != 0):
                    self.state = 142
                    self.decVariaveis()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 148
                self.comandos()
                self.state = 149
                self.match(trabalhoFinalParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChamaFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(trabalhoFinalParser.ID, 0)

        def parametros(self):
            return self.getTypedRuleContext(trabalhoFinalParser.ParametrosContext,0)


        def getRuleIndex(self):
            return trabalhoFinalParser.RULE_chamaFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamaFunc" ):
                listener.enterChamaFunc(self)
